--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,13 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
         </dependency>
+		<!-- JOL依赖 用来分析object对象在内存中的分配-->
+		<dependency>
+			<groupId>org.openjdk.jol</groupId>
+			<artifactId>jol-core</artifactId>
+			<version>0.9</version>
+		</dependency>
     </dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
